--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "global-styles",
+  "name": "global-styles-component",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
